preventing scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,16 @@
 	padding: 0;
 	margin: 0;
 }
+
+html {
+  overflow: hidden;
+  width: 100%;
+}
+
+body {
+  height: 100%;
+  position: fixed;
+	/* prevent overscroll bounce*/
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
